SAS-874: fix spacing of chat error message in converstaional prompt testing

--- a/theme-cache/web/theme.compiled.css
+++ b/theme-cache/web/theme.compiled.css
@@ -23642,20 +23642,6 @@ input[type=checkbox].three-state-checkbox + .control-label {
   line-height: 1;
 }
 
-.segmented-control {
-  height: fit-content;
-  border: 1px solid #ced0d3;
-  border-radius: 4px;
-  padding: 4px;
-  width: fit-content;
-  background-color: #f8f8f8;
-}
-.segmented-control .btn.btn-default {
-  border: 1px solid transparent;
-  background: transparent;
-  color: #0a1325;
-}
-
 .spacing-outer-bottom-medium {
   margin-bottom: 16px;
 }
@@ -24014,8 +24000,8 @@ input[type=checkbox].three-state-checkbox + .control-label {
   padding-right: unset;
 }
 .chat-container-prompting .chat-container {
-  margin-left: 16px;
-  padding-right: 32px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 .chat-container-prompting .chat-container .d-inline-block {
   display: none !important;
